force-app/main/default/objects/inspire1__Portfolio_Collaborator__c/inspire1__Portfolio_Collaborator__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Used to manage sharing permissions for Portfolios.</description>
    <label>Portfolio Collaborator</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Portfolio Collaborator ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Collaborators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>