force-app/main/default/objects/inspire1__Portfolio_Collaborator__c/fields/inspire1__AccessLevel__c.field-meta.xml
<CustomField>
    <fullName>inspire1__AccessLevel__c</fullName>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>