force-app/main/default/objects/inspire1__Portfolio_Collaborator__c/fields/inspire1__Portfolio__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>inspire1__Project_Portfolio__c</referenceTo>
    <relationshipLabel>Portfolio Collaborators</relationshipLabel>
    <relationshipName>Portfolio_Collaborators</relationshipName>
    <type>Lookup</type>
</CustomField>